Fix switch with multiple yields (#432)