@@ -969,12 +969,11 @@ public sealed class JavaPoetSourceGenerator implements SourceGenerator permits G
                 if (flatten.isEmpty()) {
                     throw new IllegalStateException("SwitchYieldCase did not return any statements");
                 }
-                StatementDef last = flatten.get(flatten.size() - 1);
-                List<StatementDef> rest = flatten.subList(0, flatten.size() - 1);
-                for (StatementDef statementDef : rest) {
-                    builder.add(renderStatementCodeBlock(objectDef, methodDef, remappedLocals, statementDef));
+                StatementDef last = flatten.getLast();
+                if (!hasSwitchYieldReturn(statement)) {
+                    throw new IllegalStateException("The last statement of SwitchYieldCase should be a return. Found: " + last);
                 }
-                renderYield(builder, methodDef, remappedLocals, last, objectDef);
+                builder.add(renderSwitchYieldStatementCodeBlock(objectDef, methodDef, remappedLocals, statement));
                 builder.unindent();
                 builder.add("}");
                 String str = builder.build().toString();
@@ -1346,6 +1345,20 @@ public sealed class JavaPoetSourceGenerator implements SourceGenerator permits G
             .build();
     }
 
+    private static boolean hasSwitchYieldReturn(StatementDef statementDef) {
+        List<StatementDef> statements = statementDef.flatten();
+        if (statements.isEmpty()) {
+            return false;
+        }
+        StatementDef last = statements.getLast();
+        return switch (last) {
+            case StatementDef.Return(_) -> true;
+            case StatementDef.IfElse(_, StatementDef statement, StatementDef elseStatement) ->
+                hasSwitchYieldReturn(statement) && hasSwitchYieldReturn(elseStatement);
+            default -> false;
+        };
+    }
+
     private void renderYield(CodeBlock.Builder builder, @Nullable MethodDef methodDef, Map<String, String> remappedLocals, StatementDef statementDef, @Nullable ObjectDef objectDef) {
         if (statementDef instanceof StatementDef.Return aReturn) {
             ExpressionDef expression = aReturn.expression();
@@ -1361,6 +1374,53 @@ public sealed class JavaPoetSourceGenerator implements SourceGenerator permits G
         } else {
             throw new IllegalStateException("The last statement of SwitchYieldCase should be a return. Found: " + statementDef);
         }
+    }
+
+    private CodeBlock renderSwitchYieldStatementCodeBlock(@Nullable ObjectDef objectDef,
+                                                          @Nullable MethodDef methodDef,
+                                                          Map<String, String> remappedLocals,
+                                                          StatementDef statementDef) {
+        return switch (statementDef) {
+            case StatementDef.Multi(List<StatementDef> statements) -> {
+                CodeBlock.Builder builder = CodeBlock.builder();
+                for (StatementDef statement : statements) {
+                    builder.add(renderSwitchYieldStatementCodeBlock(objectDef, methodDef, remappedLocals, statement));
+                }
+                yield builder.build();
+            }
+            case StatementDef.If(ExpressionDef condition, StatementDef statement) -> {
+                CodeBlock.Builder builder = CodeBlock.builder();
+                builder.add("if (");
+                builder.add(renderExpression(objectDef, methodDef, remappedLocals, condition));
+                builder.add(") {\n");
+                builder.indent();
+                builder.add(renderSwitchYieldStatementCodeBlock(objectDef, methodDef, remappedLocals, statement));
+                builder.unindent();
+                builder.add("}\n");
+                yield builder.build();
+            }
+            case StatementDef.IfElse(ExpressionDef condition, StatementDef statement, StatementDef elseStatement) -> {
+                CodeBlock.Builder builder = CodeBlock.builder();
+                builder.add("if (");
+                builder.add(renderExpression(objectDef, methodDef, remappedLocals, condition));
+                builder.add(") {\n");
+                builder.indent();
+                builder.add(renderSwitchYieldStatementCodeBlock(objectDef, methodDef, remappedLocals, statement));
+                builder.unindent();
+                builder.add("} else {\n");
+                builder.indent();
+                builder.add(renderSwitchYieldStatementCodeBlock(objectDef, methodDef, remappedLocals, elseStatement));
+                builder.unindent();
+                builder.add("}\n");
+                yield builder.build();
+            }
+            case StatementDef.Return aReturn -> {
+                CodeBlock.Builder builder = CodeBlock.builder();
+                renderYield(builder, methodDef, remappedLocals, aReturn, objectDef);
+                yield builder.build();
+            }
+            case null, default -> renderStatementCodeBlock(objectDef, methodDef, remappedLocals, statementDef);
+        };
     }
 
     private CodeBlock renderConstantExpression(Map<String, String> remappedLocals, ExpressionDef.Constant constant) {
